# Mathlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  _callback_8hpp.html  _callback_8hpp_source.html  _common_8hpp_source.html  _constants_8hpp.html  _constants_8hpp_source.html  _dll_export_8hpp.html  _dll_export_8hpp_source.html  _mat2_8hpp.html  _mat2_8hpp_source.html  _mat3_8hpp.html  _mat3_8hpp_source.html  _mat4_8hpp.html  _mat4_8hpp_source.html  _math_8hpp.html  _math_8hpp_source.html  _mathlib_8hpp.html  _mathlib_8hpp_source.html  _matrix_8hpp.html  _matrix_8hpp_source.html  _misc_8hpp.html  _misc_8hpp_source.html  _quaternion_8hpp.html  _quaternion_8hpp_source.html  _space_8hpp.html  _space_8hpp_source.html  _transform_8hpp.html  _transform_8hpp_source.html  _trigonometry_8hpp.html  _trigonometry_8hpp_source.html  _vec2_8hpp.html  _vec2_8hpp_source.html  _vec3_8hpp.html  _vec3_8hpp_source.html  _vec4_8hpp.html  _vec4_8hpp_source.html  (+110 more)
.github/workflows/: Doxygen.yml  Linux_tests.yml  MacOS_tests.yml  Windows_tests.yml  code_coverage.yml  learn-github-actions.yml  windows_tests.yml
Doc/: Doxyfile.in
Include/Collections/: Mathlib.hpp  Matrix.hpp  Misc.hpp  Space.hpp
Include/Doc/: Doxyfile.in
Include/Matrix/: Mat2.hpp  Mat3.hpp  Mat4.hpp
Include/Misc/: Callback.hpp  Constants.hpp  DllExport.hpp  Math.hpp  Trigonometry.hpp
Include/Space/: Quaternion.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Include/Transform/: Transform.hpp
Mathlib/: CMakeLists.txt
Mathlib/Include/: Includes.hpp  Math.hpp  Mathlib.hpp  Trigonometry.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Mathlib/Include/Collections/: Matrix.hpp
Mathlib/Include/Matrix/: Mat2.hpp  Mat3.hpp  Mat4.hpp
Mathlib/Include/Misc/: Callback.hpp  Common.hpp  Constants.hpp  DllExport.hpp  Math.hpp  Trigonometry.hpp
Mathlib/Include/Space/: Quaternion.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Mathlib/Include/Transform/: Transform.h  Transform.hpp
Mathlib/Include/Vector/: Vec2.hpp  Vec3.hpp  Vec4.hpp
Mathlib/Source/: Callback.cpp  Constants.cpp  Math.cpp  Trigonometry.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Mathlib/Source/Matrix/: Mat2.cpp  Mat3.cpp  Mat4.cpp
Mathlib/Source/Misc/: Callback.cpp  Constants.cpp  Math.cpp  Trigonometry.cpp
Mathlib/Source/Space/: Quaternion.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Mathlib/Source/Transform/: Transform.cpp
Mathlib/Source/Vector/: Vec2.cpp  Vec3.cpp  Vec4.cpp
Mathlib/Test/: Mat2UnitTest.cpp  Mat3UnitTest.cpp  Mat4UnitTest.cpp  MathUnitTest.cpp  QuaternionUnitTest.cpp  Vec2UnitTest.cpp  Vec3UnitTest.cpp  Vec4UnitTest.cpp
Mathlib/Test/Matrix/: Mat3UnitTest.cpp  Mat4UnitTest.cpp
Mathlib/Test/Misc/: MathUnitTest.cpp
Mathlib/Test/Space/: Vec2UnitTest.cpp  Vec3UnitTest.cpp  Vec4UnitTest.cpp
Mathlib/Test/Transform/: TransformUnitTest.cpp
Mathlib/UnitTests/: CMakeLists.txt
Mathlib/UnitTests/Matrix/: Mat3UnitTest.cpp  Mat4UnitTest.cpp
Mathlib/UnitTests/Space/: QuaternionUnitTest.cpp
Mathlib/UnitTests/Transform/: TransformUnitTest.cpp
Source/Matrix/: Mat3.cpp
Source/Misc/: Constants.cpp  Math.cpp  Trigonometry.cpp
Source/Space/: Vec2.cpp
UnitTests/: CMakeLists.txt
UnitTests/Matrix/: Mat2UnitTest.cpp  Mat3UnitTest.cpp
UnitTests/Misc/: MathUnitTest.cpp
UnitTests/Space/: QuaternionUnitTest.cpp  Vec2UnitTest.cpp  Vec3UnitTest.cpp  Vec4UnitTest.cpp
search/: all_0.js  all_10.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  functions_1.js  functions_10.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  (+16 more)
